--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="calculator">
-            <input type="text" class="display" placeholder="0">
+            <p type="text" class="data" placeholder="0"></p>
            
             <button onclick="calcfun(this)" class="1">1</button>
             <button onclick="calcfun(this)" class="2">2</button>
@@ -22,12 +22,14 @@
             <button onclick="calcfun(this)" class="8">8</button>
             <button onclick="calcfun(this)" class="9">9</button>
             <button onclick="calcfun(this)" class="0">0</button>
-            <button onclick="calcfun(this)" class="*">*</button>
-            <button onclick="calcfun(this)" class="+">+</button>
-            <button onclick="calcfun(this)" class="-">-</button>
-            <button onclick="calcfun(this)" class="/">/</button>
-            <button onclick="calcfun(this)" class="%">%</button>
-            <button onclick="calcfun(this)" class="=">=</button>
+            <button onclick="calcfun(this)" class="express *">*</button>
+            <button onclick="calcfun(this)" class="express +">+</button>
+            <button onclick="calcfun(this)" class="express -">-</button>
+            <button onclick="calcfun(this)" class="express /">/</button>
+            <button onclick="calcfun(this)" class="express %">%</button>
+            <button onclick="calcfun(this)" class="express .">.</button>
+            <button onclick="resfun(this)" class="equal">=</button>
+            
 
 
 
