--- a/index.html
+++ b/index.html
@@ -15,19 +15,21 @@
             <button onclick="calcfun(this)" class="1">1</button>
             <button onclick="calcfun(this)" class="2">2</button>
             <button onclick="calcfun(this)" class="3">3</button>
+            <button onclick="calcfun(this)" class="express +">+</button>
+
             <button onclick="calcfun(this)" class="4">4</button>
             <button onclick="calcfun(this)" class="5">5</button>
             <button onclick="calcfun(this)" class="6">6</button>
+            <button onclick="calcfun(this)" class="express -">-</button>
             <button onclick="calcfun(this)" class="7">7</button>
             <button onclick="calcfun(this)" class="8">8</button>
             <button onclick="calcfun(this)" class="9">9</button>
-            <button onclick="calcfun(this)" class="0">0</button>
             <button onclick="calcfun(this)" class="express *">*</button>
-            <button onclick="calcfun(this)" class="express +">+</button>
-            <button onclick="calcfun(this)" class="express -">-</button>
-            <button onclick="calcfun(this)" class="express /">/</button>
-            <button onclick="calcfun(this)" class="express %">%</button>
+            <button onclick="calcfun(this)" class="0">0</button>
             <button onclick="calcfun(this)" class="express .">.</button>
+            <button onclick="calcfun(this)" class="express %">%</button>
+            <button onclick="calcfun(this)" class="express /">/</button>
+            <button onclick="clearfun(this)" class="clear">c</button>
             <button onclick="resfun(this)" class="equal">=</button>
             
 
